Replace old IgniteSchema with new IgniteCatalogSchema.